Update PARFLOW submodule
* add python3 scripting to pfnuopc cap
* update environment files with python
* update setuprun.sh and usecases

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -136,6 +136,7 @@ if (ENABLE_PARFLOW)
     message(FATAL_ERROR "Environment missing PARFLOW_HAVE_CLM.")
   endif ()
   set(PARFLOW_HAVE_CLM $ENV{PARFLOW_HAVE_CLM} CACHE FILEPATH "Setting for PARFLOW_HAVE_CLM")
+  string(TOUPPER "${PARFLOW_HAVE_CLM}" PARFLOW_HAVE_CLM)
   if (NOT DEFINED ENV{PARFLOW_HYPRE_DIR})
     message(FATAL_ERROR "Environment missing PARFLOW_HYPRE_DIR.")
   endif ()
@@ -171,6 +172,9 @@ if (ENABLE_PARFLOW)
   target_link_libraries(NLC.exe PUBLIC ${NLC_PARFLOW_INST}/lib/libamps.a)
   target_link_libraries(NLC.exe PUBLIC ${NLC_PARFLOW_INST}/lib/libcjson.a)
   target_link_libraries(NLC.exe PUBLIC ${NLC_PARFLOW_INST}/lib/libpfkinsol.a)
+  if( ${PARFLOW_HAVE_CLM} STREQUAL "ON")
+    target_link_libraries(NLC.exe PUBLIC ${NLC_PARFLOW_INST}/lib/libpfclm.a)
+  endif ()
   target_include_directories(NLC.exe PUBLIC ${NLC_PARFLOW_INST}/include)
   list(APPEND nlc_defs_private NUOPCCAP_PARFLOW=parflow_nuopc)
 
